syntax = "proto3";
import "google/protobuf/any.proto";

package pocket;

option go_package = "github.com/pokt-network/pocket/shared/debug";

enum PocketTopic {
	UNKNOWN_POCKET_TOPIC = 0;
	POCKET_NODE_TOPIC = 1;
	CONSENSUS_MESSAGE_TOPIC = 2;
	P2P_MESSAGE_TOPIC = 3;
	DEBUG_TOPIC = 4;
}

message PocketEvent {
  PocketTopic topic = 1;
  google.protobuf.Any data = 2;
}
